// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css composes 1`] = `
.glamor-0 {
  composes: css-k008qs;
  -webkit-box-packjustifyContent: center;
  -webkit-justifyContent: center;
  -ms-flex-packjustifyContent: center;
  justifyContent: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css computed key is only dynamic 1`] = `
<div
  className="css-118zkyu"
/>
`;

exports[`css float property 1`] = `
.glamor-0 {
  float: left;
}

<div
  className="glamor-0"
/>
`;

exports[`css handles more than 10 dynamic properties 1`] = `
.glamor-0 {
  text-decoration: underline;
  border-right: solid blue 54px;
  background: white;
  color: black;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css handles objects 1`] = `
.glamor-0 {
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: blue;
  font-size: 20px;
  height: 50;
}

<div
  className="glamor-0"
/>
`;

exports[`css macro composes 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css macro composes with objects 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  display: block;
  width: 30px;
  height: calc(40vw - 50px);
  justify-content: center;
}

.glamor-0:hover {
  color: blue;
}

.glamor-0:after {
  content: " ";
  color: red;
}

@media (min-width: 420px) {
  .glamor-0 {
    color: green;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css macro composes with undefined values 1`] = `
.glamor-0 {
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css macro handles more than 10 dynamic properties 1`] = `
.glamor-0 {
  background: white;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
  border: solid 1px red;
}

<div
  className="glamor-0"
/>
`;

exports[`css macro handles objects 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css macro null rule 1`] = `
<div
  className="css-nil"
/>
`;

exports[`css random interpolation with undefined values 1`] = `
.glamor-0 {
  -webkit-box-packjustifyContent: center;
  -webkit-justifyContent: center;
  -ms-flex-packjustifyContent: center;
  justifyContent: center;
}

<div
  className="glamor-0"
/>
`;
